feat: add a field to control calculation of load score
